# zone-utilities

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md  appveyor.yml  vcpkg.json
.devcontainer/: devcontainer.json
CMake/: FindFreeImage.cmake
awater/: CMakeLists.txt  awater.cpp  water_map.cpp  water_map.h
azone/: CMakeLists.txt  azone.cpp  map.cpp  map.h
common/: CMakeLists.txt  aligned_bounding_box.h  any.h  archive.h  bsp.h  compression.cpp  compression.h  config.cpp  eq_math.cpp  eq_math.h  eq_physics.cpp  eq_physics.h  eqg_geometry.h  eqg_invis_wall.h  eqg_loader.cpp  eqg_loader.h  eqg_material.h  eqg_model_loader.cpp  eqg_model_loader.h  eqg_region.h  eqg_structs.h  eqg_terrain.h  eqg_v4_loader.cpp  eqg_v4_loader.h  geometry.h  invis_wall.h  light.h  octree.h  oriented_bounding_box.cpp  oriented_bounding_box.h  pfs.cpp  pfs.h  pfs_crc.cpp  pfs_crc.h  placeable.h  placeable_group.h  raycast_mesh.cpp  s3d_geometry.h  s3d_loader.cpp  s3d_loader.h  (+22 more)
common/core/: config.cpp  config.h  config_interface.h
common/dependency/: container.h
common/eq/: eq_physics.cpp  eq_physics.h  eqemu_endian.h  eqg_loader.cpp  eqg_model_loader.cpp  eqg_v4_loader.cpp  pfs.cpp  s3d_loader.cpp  water_map.cpp  water_map.h  water_map_v2.cpp  water_map_v2.h  zone_map.cpp  zone_map.h
common/graphics/: actor.h  app.cpp  app.h  component.h  eq_math.cpp  eq_math.h  eqg_loader.cpp  eqg_loader.h  eqg_model_loader.cpp  eqg_model_loader.h  eqg_v4_loader.cpp  eqg_v4_loader.h  oriented_bounding_box.h  s3d_loader.cpp  wld_fragment.h
common/log/: composite_logger.cpp  composite_logger.h  console_logger.cpp  console_logger.h  file_logger.cpp  file_logger.h  logger_interface.cpp  logger_interface.h
common/math/: oriented_bounding_box.cpp
dependencies/: .gitignore  CMakeLists.txt
dependencies/bullet/: CMakeLists.txt
dependencies/fmt/doc/html/: api.html  contents.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  syntax.html  usage.html
dependencies/glew/src/: CMakeLists.txt
dependencies/imgui/: CMakeLists.txt  imgui.cpp  imgui.h
dependencies/libuv/: CMakeLists.txt
dependencies/recast/: CMakeLists.txt
dependencies/recast/DebugUtils/Source/: RecastDebugDraw.cpp
dependencies/recast/debug_utils/src/: DetourDebugDraw.cpp
dependencies/recastnavigation/: CMakeLists.txt
dependencies/recastnavigation/DebugUtils/Source/: DetourDebugDraw.cpp
log/: CMakeLists.txt  log_file.h  log_macros.h
map_edit/: CMakeLists.txt  debug_draw.cpp  debug_draw.h  dynamic_geometry.cpp  dynamic_geometry.h  entity.h  imgui_glfw.cpp  line_model.cpp  line_model.h  main.cpp  map_edit_app.cpp  map_edit_app.h  module.h  module_navigation.cpp  module_navigation.h  module_navigation_build_tile.cpp  module_navigation_build_tile.h  module_volume.cpp  module_volume.h  module_wp.cpp  module_wp.h  nav_mesh_model.cpp  nav_mesh_model.h  rc_chunky_tri_mesh.cpp  scene.cpp  scene.h  shader.cpp  static_geometry.cpp  static_geometry.h  volume_box.cpp  volume_box.h  volume_navigation.h  water_portal.cpp  water_portal.h
map_edit/shaders/: basic.vert  basic130.vert
map_info/: CMakeLists.txt  RaycastMesh.cpp  main.cpp  map.cpp  map.h  water_map.h
map_view/: CMakeLists.txt  camera.cpp  camera.h  imgui_gflw.cpp  main.cpp  map.cpp  map.h  model.cpp  model.h  navigation.cpp  navigation.h  overlay.cpp  overlay.h  shader.cpp  shader.h  zone.cpp  zone.h
map_view/shaders/: basic.frag  basic.vert  basic130.vert  basic150.frag  basic150.vert
model_view/: CMakeLists.txt  main.cpp  model_view_app.cpp  model_view_app.h
pfs/: CMakeLists.txt  main.cpp
physics/: CMakeLists.txt  actor.cpp  actor.h  application.cpp  application.h  main.cpp  renderer.cpp  renderer.h  shader.h
recast/: CMakeLists.txt
recast/debug_utils/: CMakeLists.txt
recast/detour/: CMakeLists.txt
recast/detour_tile_cache/: CMakeLists.txt
recast/recast/: CMakeLists.txt
src/: .clang-format
src/awater/: CMakeLists.txt  awater.cpp
src/azone/: CMakeLists.txt  azone.cpp  azone_map.cpp  azone_map.h  map.cpp  map.h
src/common/: CMakeLists.txt  aligned_bounding_box.h  config.cpp  config.h  eq_math.cpp  eq_math.h  eq_physics.cpp  eq_physics.h  eqemu_endian.h  eqg_geometry.h  eqg_invis_wall.h  eqg_loader.cpp  eqg_loader.h  eqg_material.h  eqg_model_loader.cpp  eqg_model_loader.h  eqg_region.h  eqg_structs.h  eqg_terrain.h  eqg_terrain_tile.h  eqg_v4_loader.cpp  eqg_v4_loader.h  eqg_water_sheet.h  light.h  octree.h  oriented_bounding_box.cpp  oriented_bounding_box.h  pfs.cpp  pfs.h  pfs_crc.cpp  pfs_crc.h  placeable.h  placeable_group.h  s3d_bsp.h  s3d_geometry.h  s3d_loader.cpp  s3d_loader.h  s3d_skeleton_track.h  s3d_texture.h  s3d_texture_brush.h  (+16 more)
src/common/core/: compression.cpp  compression.h  config.cpp  config.h  crc.cpp  crc.h
src/common/event/: background_task.h  event_loop.h  task.h  timer.h
src/common/format/: pfs.cpp  pfs.h
src/common/graphics/: imgui_glfw.cpp  imgui_glfw.h  imgui_opengl3.cpp  imgui_opengl3.h
src/common/math/: aligned_bounding_box.h  constant.h  distance.cpp  distance.h  matrix_op.cpp  matrix_op.h  octree.h  oriented_bounding_box.h
src/common/string/: transform.cpp  transform.h
src/log/: log_base.h  log_file.cpp  log_file.h  log_macros.h  log_manager.cpp  log_manager.h  log_stdout.cpp  log_stdout.h  log_types.h
src/map_edit/: CMakeLists.txt  debug_draw.cpp  debug_draw.h  dynamic_geometry.cpp  dynamic_geometry.h  entity.h  imgui_glfw.cpp  imgui_glfw.h  line_model.h  main.cpp  module.h  module_navigation.cpp  module_navigation.h  module_navigation_build_tile.cpp  module_navigation_build_tile.h  module_volume.cpp  module_volume.h  module_wp.cpp  module_wp.h  rc_chunky_tri_mesh.cpp  rc_chunky_tri_mesh.h  scene.cpp  scene.h  scene_module.h  shader.cpp  shader.h  static_geometry.cpp  static_geometry.h
src/map_edit/shaders/: basic.vert  basic130.vert
src/model_view/: CMakeLists.txt  main.cpp
src/pfs/: CMakeLists.txt  main.cpp
src/resource_mapper/: CMakeLists.txt  main.cpp
utils/dev-dockerfile/: Dockerfile  Makefile
(+1 files in other folders)
