CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

OPTION(EQEMU_ENABLE_GRAPHICS "Enable Graphics Engine" OFF)
OPTION(EQEMU_ENABLE_GL "Enable programs that rely on OpenGL (turn off if you only want command line)" ON)
OPTION(EQEMU_ENABLE_TESTS "Enable tests" ON)

IF(EQEMU_ENABLE_TESTS)
	LIST(APPEND VCPKG_MANIFEST_FEATURES "tests")
ENDIF()

IF(EQEMU_ENABLE_GL)
	LIST(APPEND VCPKG_MANIFEST_FEATURES "opengl")
ENDIF()

SET(CMAKE_TOOLCHAIN_FILE ${CMAKE_CURRENT_SOURCE_DIR}/vcpkg/scripts/buildsystems/vcpkg.cmake CACHE STRING "Vcpkg toolchain file")

PROJECT(EQEmuZoneUtils)

IF(NOT CMAKE_BUILD_TYPE)
	SET(CMAKE_BUILD_TYPE RelWithDebInfo CACHE STRING "Choose the type of build." FORCE)
ENDIF(NOT CMAKE_BUILD_TYPE)

LIST(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
SET(CMAKE_PREFIX_PATH "${CMAKE_CURRENT_SOURCE_DIR}/external" "${CMAKE_PREFIX_PATH}")

IF(MSVC)
	ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /fp:fast")
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
ENDIF(MSVC)

ADD_DEFINITIONS(-DEQEMU_LOG_LEVEL=32)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(Bullet REQUIRED)
FIND_PACKAGE(fmt CONFIG REQUIRED)
FIND_PACKAGE(unofficial-libuv CONFIG REQUIRED)
FIND_PACKAGE(nlohmann_json CONFIG REQUIRED)
FIND_PACKAGE(ZLIB REQUIRED)

INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BULLET_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${ZLIB_INCLUDE_DIRS})

INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/common/")
INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/src/log/")

IF(EQEMU_ENABLE_GRAPHICS)
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/Recast/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DetourTileCache/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/Detour/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DebugUtils/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DetourCrowd/Include")
	
	ADD_SUBDIRECTORY(dependencies/libuv)
	ADD_SUBDIRECTORY(dependencies/bgfx)
	ADD_SUBDIRECTORY(src/common)
	ADD_SUBDIRECTORY(src/log)
	ADD_SUBDIRECTORY(src/azone)
	ADD_SUBDIRECTORY(src/awater)
	ADD_SUBDIRECTORY(src/pfs)
ELSEIF(EQEMU_ENABLE_GL)
	FIND_PACKAGE(GLEW REQUIRED)
	FIND_PACKAGE(OpenGL REQUIRED)
	FIND_PACKAGE(glfw3 CONFIG REQUIRED)
	FIND_PACKAGE(glm CONFIG REQUIRED)
	FIND_PACKAGE(imgui CONFIG REQUIRED)

	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${GLEW_INCLUDE_DIRS})
	INCLUDE_DIRECTORIES(${OPENGL_INCLUDE_DIR})
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/Recast/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DetourTileCache/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/Detour/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DebugUtils/Include")
	INCLUDE_DIRECTORIES("${CMAKE_CURRENT_SOURCE_DIR}/dependencies/recastnavigation/DetourCrowd/Include")
	
	ADD_SUBDIRECTORY(dependencies/recastnavigation)
	ADD_SUBDIRECTORY(src/common)
	ADD_SUBDIRECTORY(src/log)
	ADD_SUBDIRECTORY(src/azone)
	ADD_SUBDIRECTORY(src/awater)
	ADD_SUBDIRECTORY(src/pfs)
	ADD_SUBDIRECTORY(src/map_edit)
ELSE(EQEMU_ENABLE_GL)
	ADD_SUBDIRECTORY(dependencies/libuv)
	ADD_SUBDIRECTORY(src/common)
	ADD_SUBDIRECTORY(src/log)
	ADD_SUBDIRECTORY(src/azone)
	ADD_SUBDIRECTORY(src/awater)
	ADD_SUBDIRECTORY(src/pfs)
ENDIF()
