CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(physics_sources
	imgui_glfw.cpp
	main.cpp
	renderer.cpp
)

SET(physics_headers
	imgui_glfw.h
	renderer.h
)

ADD_EXECUTABLE(physics ${physics_sources} ${physics_headers})

INSTALL(TARGETS physics RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

TARGET_LINK_LIBRARIES(physics PRIVATE common)
TARGET_LINK_LIBRARIES(physics PRIVATE libuv)
TARGET_LINK_LIBRARIES(physics PRIVATE imgui)
TARGET_LINK_LIBRARIES(physics PRIVATE glfw)
TARGET_LINK_LIBRARIES(physics PRIVATE ${OPENGL_gl_LIBRARY})
TARGET_LINK_LIBRARIES(physics PRIVATE recast_navigation)
TARGET_LINK_LIBRARIES(physics PRIVATE ZLIB::ZLIB)
TARGET_LINK_LIBRARIES(physics PRIVATE GLEW::GLEW)
TARGET_LINK_LIBRARIES(physics PRIVATE ${BULLET_LIBRARIES})
TARGET_LINK_LIBRARIES(physics PRIVATE fmt)

IF(WIN32)
	TARGET_LINK_LIBRARIES(physics PRIVATE ws2_32)
	TARGET_LINK_LIBRARIES(physics PRIVATE psapi)
	TARGET_LINK_LIBRARIES(physics PRIVATE iphlpapi)
	TARGET_LINK_LIBRARIES(physics PRIVATE userenv)
ENDIF(WIN32)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
