CMAKE_MINIMUM_REQUIRED(VERSION 3.10.2)

SET(model_view_sources
	main.cpp
)

SET(model_view_headers
)

ADD_EXECUTABLE(model_view ${model_view_sources} ${model_view_headers})

INSTALL(TARGETS model_view RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})

TARGET_LINK_LIBRARIES(model_view PRIVATE common)
TARGET_LINK_LIBRARIES(model_view PRIVATE log)
TARGET_LINK_LIBRARIES(model_view PRIVATE libuv)
TARGET_LINK_LIBRARIES(model_view PRIVATE imgui)
TARGET_LINK_LIBRARIES(model_view PRIVATE glfw)
TARGET_LINK_LIBRARIES(model_view PRIVATE ${OPENGL_gl_LIBRARY})
TARGET_LINK_LIBRARIES(model_view PRIVATE ZLIB::ZLIB)
TARGET_LINK_LIBRARIES(model_view PRIVATE GLEW::GLEW)

IF(WIN32)
	TARGET_LINK_LIBRARIES(model_view PRIVATE ws2_32)
	TARGET_LINK_LIBRARIES(model_view PRIVATE psapi)
	TARGET_LINK_LIBRARIES(model_view PRIVATE iphlpapi)
	TARGET_LINK_LIBRARIES(model_view PRIVATE userenv)
ENDIF(WIN32)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
